erDiagram
    household ||--o{ household_membership : "has members"
    user_account ||--o{ household_membership : "holds one or more"
    household ||--o{ shared_vault_password : "contains"
    shared_vault_password ||--o{ user_vault_access : "is encrypted by user's public key"
    user_account ||--o{ user_vault_access : "decrypts with priv key"

    household {
        integer household_id PK
        string household_name
        timestamp created_at
        timestamp updated_at
        integer join_code
    }

    user_account {
        integer user_id PK
        string username UK
        binary public_key
        timestamp created_at
        timestamp updated_at
        binary password_salt
        binary password_hash
    }
    %% User's secret key is generated from password

    household_membership {
        integer user_id PK,FK
        integer household_id PK,FK
        string role
        timestamp created_at
        timestamp updated_at
    }

    shared_vault_password {
        integer item_id PK
        integer group_id FK
        string service_name
        string service_username
        timestamp created_at
        timestamp updated_at
    }

    user_vault_access {
        integer user_id PK,FK
        integer item_id PK,FK
        binary encrypted_service_password
        timestamp created_at
        timestamp updated_at
    }
